--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -11,3 +11,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+shopify.base.url=https://{store_name}.myshopify.com/admin/api/2025-07/graphql.json
