--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,6 +2,7 @@ spring.application.name=StoreDataAPI
 server.port=8000
 server.address=0.0.0.0
 
+server.servlet.context-path=/api
 
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
@@ -9,5 +10,6 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+springdoc.swagger-ui.path=/
