trying out on railway one

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -13,3 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 springdoc.swagger-ui.path=/
+
+# Allow cookies in cross-site requests during dev
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.secure=true
+
